[tool.poetry]
name = "wordlette"
version = "0.1.0-alpha.1"
description = "Simple and easy content management system that anyone can use."
authors = ["Zech Zimmerman <hi@zech.codes>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
starlette = "^0.20.4"
bevy = "^1.3.12"
Mako = "^1.2.1"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
requests = "^2.24.0"
uvicorn = "^0.18.2"
pytest-asyncio = "^0.19.0"
httpx = "^0.23.0"

[tool.poetry.extras]
sqlite = ["sqlalchemy", "aiosqlite"]
postgres = ["sqlalchemy", "asyncpg"]
toml = ["tomli"]
yaml = ["pyyaml"]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
