[tool.poetry]
name = "wordlette"
version = "0.1.0a3"
description = "Simple and easy framework for building complex websites."
authors = ["ZechCodes <hi@zech.codes>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bevy = "^2.0.0"
starlette = "^0.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.24.1"
uvicorn = "^0.22.0"
tomlkit = "^0.11.8"
pyyaml = "^6.0.1"
sqlalchemy = "^2.0.19"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
